welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:20: error: 'while' expected but '}' found.
		}
                ^Diagonal:26: error: illegal start of simple expression
}
^Diagonal:32: error: expected start of definition
	override def forward(i:Int)  { 
                 ^Diagonal:35: error: expected start of definition
	override def forward()  {
                 ^Diagonal:38: error: expected start of definition
	override def backward(i:Int) {
                 ^Diagonal:41: error: expected start of definition
	override def backward() {
                 ^Diagonal:44: error: Unmatched closing brace '}' ignored here
}
^